# ltl_multi_agent

./: .gitmodules  README.md
ltl_automation_a1/: CMakeLists.txt  README.md  package.xml
ltl_automation_a1/config/: a1_ltl_formula.yaml  a1_ts.yaml  example_ts.yaml  example_ts_dog.yaml  openshelf_ts.yaml
ltl_automation_a1/launch/: a1_monitor_bt.launch  dr_monitor_bt.launch  ltl_a1.launch  ltl_a1_simu_test.launch  openshelf_monitor_bt.launch  wassi_monitor_bt.launch
ltl_automation_a1/nodes/: ltl_automation_a1_node.py  ltl_automation_a1_node2.py
ltl_automation_a1/resources/: default_tree.xml  replanning.xml  replanning_tree.xml  replanning_tree_0.xml  replanning_tree_1.xml  replanning_tree_delivery.xml  replanning_tree_delivery_fake.xml  replanning_tree_mobile.xml  replanning_tree_quadruped.xml  replanning_tree_quadruped_fake.xml  replanning_tree_wassi.xml  replanning_tree_wassi_fake.xml
ltl_automation_a1/src/: ltl_bt_interface_a1.cpp  ltl_bt_interface_openshelf.cpp  ltl_bt_interface_wassi.cpp  navigation_node.h  yaml_test.cpp
ltl_automation_a1/srv/: LTLFakeInput.srv  LTLStateLoadDisturb.srv  LTLTrace.srv
ltl_planning_core/: .gitignore  README.md
ltl_planning_core/documentation/: planner_plugins.md
ltl_planning_core/ltl_automaton_core/: CMakeLists.txt  package.xml
ltl_planning_core/ltl_automaton_hil_mic/: CMakeLists.txt  README.md  package.xml  setup.py
ltl_planning_core/ltl_automaton_hil_mic/launch/: bool_hil_mic_test.launch
ltl_planning_core/ltl_automaton_hil_mic/nodes/: bool_cmd_mix_initiative_controller.py  vel_cmd_mix_initiative_controller.py
ltl_planning_core/ltl_automaton_msgs/: CMakeLists.txt  package.xml
ltl_planning_core/ltl_automaton_msgs/msg/: LTLPlan.msg  LTLState.msg  LTLStateArray.msg  LTLStateRuns.msg  TransitionSystemState.msg  TransitionSystemStateStamped.msg
ltl_planning_core/ltl_automaton_msgs/srv/: ClosestState.srv  TaskPlanning.srv  TrapCheck.srv
ltl_planning_core/ltl_automaton_planner/: CMakeLists.txt  README.md  package.xml  setup.py
ltl_planning_core/ltl_automaton_planner/cfg/: ltl_automaton_dynparam.cfg
ltl_planning_core/ltl_automaton_planner/config/: example_ltl_formula.yaml  example_ts.yaml  example_ts_delivery.yaml  example_ts_dog.yaml  example_ts_quadruped.yaml  example_ts_training.yaml  ltl_formula_final_1.yaml  ltl_formula_final_2.yaml  test_ltl_formula.yaml  test_ts_dog.yaml  ts_delivery.yaml  ts_quadruped.yaml  ts_wassi.yaml
ltl_planning_core/ltl_automaton_planner/launch/: case_1_planner_test.launch  case_2_planner_test.launch  launch_all_robots.launch  ltl_planner.launch  ltl_planner_example.launch  ltl_planner_multi_robot.launch  ltl_planner_multi_robot_test.launch  ltl_planner_multi_robot_test_replanning.launch  ltl_planner_test.launch  ltl_planner_testdynparam.launch  study_1.launch  study_2.launch
ltl_planning_core/ltl_automaton_planner/nodes/: multi_robot_planner_node.py  planner_node.py  robot_planner_node_exp.py  test_node.py
ltl_planning_core/ltl_automaton_planner/src/ltl_automaton_planner/: ltl_automaton_utilities.py  networkx_test.py
ltl_planning_core/ltl_automaton_planner/src/ltl_automaton_planner/boolean_formulas/: lexer.py  parser.py
ltl_planning_core/ltl_automaton_planner/src/ltl_automaton_planner/ltl_tools/: buchi.py  decomposition_set.py  decomposition_set_2.py  discrete_plan.py  graph_search_team.py  ltl2ba.py  ltl_planner.py  ltl_planner_multi_robot.py  ltl_planner_multi_robot_exp.py  product.py  promela.py  team.py  ts.py
ltl_planning_core/ltl_automaton_std_transition_systems/: CMakeLists.txt  README.md  package.xml
ltl_planning_core/ltl_automaton_std_transition_systems/nodes/: region_2d_pose_monitor.py
ltl_planning_core/ltl_automaton_std_transition_systems/scripts/: region_2d_pose_definition.py  region_2d_pose_generator.py
ltl_planning_core/ltl_automaton_std_transition_systems/src/: region_6d_jointspace_monitor.py
motion_capture_simulator/: LICENSE  README.md
motion_capture_simulator/mocap_simulator/: CMakeLists.txt  package.xml
motion_capture_simulator/mocap_simulator/launch/: qualisys_simulator.launch
motion_capture_simulator/mocap_simulator/src/: mocap_simulator_node.py
quadruped_sim/: .gitmodules  README.md
quadruped_sim/A1_ROS/: .gitignore  CMakeLists.txt  README.md  package.xml
quadruped_sim/A1_ROS/config/: a1-defaults.yaml  a1-mit-ctrl-user-parameters.yaml
quadruped_sim/A1_ROS/msg/: locomotion_status.msg
quadruped_sim/A1_ROS/src/: Gazebo_interface.cpp  Gazebo_interface.h  body.cpp  body.h  convert.h  locomotion_status_publisher.cpp  main.cpp  servo.cpp
quadruped_sim/bt_navigator/: CMakeLists.txt  package.xml
quadruped_sim/bt_navigator/bt_xml/: basic_example.xml  bt_navigation.xml
quadruped_sim/bt_navigator/launch/: bt_basic.launch
quadruped_sim/bt_navigator/src/: check_near_ppl.h  check_rm_open.h  check_slugs.h  (+12 more)
quadruped_sim/mocap_sim/: CMakeLists.txt  package.xml
quadruped_sim/unitree_bringup/: CMakeLists.txt  package.xml
quadruped_sim/unitree_navigate/: CMakeLists.txt  package.xml
ros_ltl2ba/: CMakeLists.txt  README  package.xml
ros_ltl2ba/src/: alternating.c  buchi.c  cache.c  generalized.c  lex.c  ltl2ba.h  main.c  mem.c  rewrt.c
ros_ltl2ba/src/patch-from-1.2/: ltl2ba-warning-global-var.patch
ubtna_gazebo_pkg/: .gitignore
ubtna_gazebo_pkg/bringup_sim/: CMakeLists.txt  package.xml
ubtna_gazebo_pkg/bringup_sim/launch/: spawn_one_dr7.launch  spawn_one_openshelf7.launch  spawn_one_wassi7.launch
ubtna_gazebo_pkg/ubtna_mobile_description/: CMakeLists.txt  README.md  package.xml
ubtna_gazebo_pkg/ubtna_mobile_description/meshes/: caster_wheel.dae  chassis.dae  hokuyo.dae  left_wheel.dae  right_wheel.dae
ubtna_gazebo_pkg/ubtna_mobile_description/meshes/step_bkp/: caster_wheel.dae
ubtna_gazebo_pkg/ubtna_mobile_description/urdf/: iserve_openshelf7.gazebo  iserve_openshelf7.xacro  iserve_openshelf7_properties.xacro  macros_wheel_carea.xacro  macros_wheel_companion7.xacro  macros_wheel_delivery3.xacro  macros_wheel_delivery7.xacro  macros_wheel_openshelf7.xacro  macros_wheel_uvbot7.xacro  macros_wheel_wassi7.xacro  sensors.xacro
(+146 files in other folders)
