<?xml version="1.0"?>
<package format="2">
  <name>ltl2ba</name>
  <version>1.3.0</version>
  <description>A ros package wrapping for the ltl2ba software by Dennis Oddoux and Paul Gastin </description>


  <maintainer email="rbaran@kth.se">Robin Baran</maintainer>
  <author email="rbaran@kth.se">Robin Baran</author>

  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

</package>
