<?xml version="1.0"?>
<package format="2">
  <name>ltl_automaton_msgs</name>
  <version>0.1.0</version>
  <description>The message definition package for ltl_automaton_core and other extended packages</description>

  <maintainer email="rbaran@kth.se">Robin Baran</maintainer>
  <maintainer email="wencsc@kth.se">Wenceslao Shaw Cortez</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
