<package>
  <name>bringup_sim</name>
  <version>0.3.5</version>
  <description>simulation provides a mobile model for the gazebo simulator.
     It can be commanded using geometry_msgs/Twist messages.</description>
  <maintainer email="dejun.guo@ubtrobot.com">dejun</maintainer>

  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>



  <!-- Dependencies needed only for running tests. -->

</package>
