<package>
  <name>ubtna_mobile_description</name>
  <version>0.3.5</version>
  <description>ubtna_mobile_description provides an URDF model of a mobile robot.</description>
  <maintainer email="dejun.guo@ubtrobot.com">dejun</maintainer>

  <license>BSD</license>

  <!-- Dependencies which this package needs to build itself. -->

  <buildtool_depend>catkin</buildtool_depend>
  <!-- Dependencies needed to compile this package. -->
  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <!-- Dependencies needed after this package is compiled. -->
  <!--run_depend>hector_sensors_description</run_depend-->

  <!-- Dependencies needed only for running tests. -->

</package>
